--- a/pages/about.html
+++ b/pages/about.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
           rel="stylesheet">
-    <title>ABOUT</title>
-    <link rel="stylesheet" href="../public/build/tailwind.css">
+    <title>BEN KUBIN</title>
+    <link rel="stylesheet" href="./public/build/tailwind.css">
 </head>
-<body class="h-screen">
+<body class="md:overflow-hidden h-screen">
 <header>
     <div class="w-full h-17 flex flex-col justify-center items-center" id="topnav">
         <svg width="222" height="62" viewBox="0 0 222 62" fill="none"
@@ -73,7 +73,8 @@
 
 </header>
 <main class="w-screen h-full flex justify-center">
-    <div id="page-container" class="w-screen h-[96%] mx-6 mt-2.5 bg-none border-8 border-mainPurple overflow-hidden relative flex flex-col">
+    <div id="page-container"
+         class="w-screen md:mb-0 h-[94%] sm:h-[87%] md:h-[88%] mx-6 mt-2.5 bg-none border-8 border-mainPurple overflow-hidden relative flex flex-col">
 
     </div>
 </main>
