Alright... Finally correct and the about page has also been updated

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
           rel="stylesheet">
     <title>BEN KUBIN</title>
-    <link rel="stylesheet" href="./public/build/tailwind.css">
+    <link rel="stylesheet" href="../public/build/tailwind.css">
 </head>
 <body class="md:overflow-hidden h-screen">
 <header>
