Finally got screen size optimization correct!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>BEN KUBIN</title>
     <link rel="stylesheet" href="./public/build/tailwind.css">
 </head>
-<body class="md:overflow-hidden h-screen">
+<body class="lg:overflow-hidden h-screen">
 <header>
     <div class="w-full h-17 flex flex-col justify-center items-center" id="topnav">
         <svg width="222" height="62" viewBox="0 0 222 62" fill="none"
