--- a/pages/contact.html
+++ b/pages/contact.html
@@ -102,7 +102,7 @@
             <p class="font-extralight w-4/5 sm:w-1/2 text-center">
                 Whether you're a recruiter or just interested in my work, I'd love to hear from you! I'm currently
                 looking for internships/work in web and software development. If you're interested in my résumé, the
-                fastest way is to email me directly!
+                fastest way is to reach me is by emailing me directly!
             </p>
             <svg class="absolute -z-10 -top-20" width="360" height="336" viewBox="0 0 360 336" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_0_1)">
